--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html  lang="en" >
    <head>
-      <title>{{ title }}</title>
+      <title>Patrol Robot</title>
       <meta http-equiv="refresh" content="300" />
-      <link rel="stylesheet" href="../static/style.css/">
+      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+      <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+      <link rel="manifest" href="/static/site.webmanifest">
    </head>
-   <body onload='addListeners();'>
+   <body>
       <h1>Patrol Robot</h1>
       <h2>The date and time on the server is: {{ time }}</h2>
-      <a href="/motor/stop" class="button">STOP!</a>
-      <a href="/motor/forward" class="button">Forward</a>
+      <button type="button" id="stop">STOP!</button>
+      <button type="button" id="forward">Forward</button>
       <br />
-      <a href="/motor/anticlockwise" class="button">Anticlockwise rotation</a>
-      <a href="/motor/clockwise" class="button">Clockwise rotation</a>
+      <button type="button" id="anticlockwise">Anticlockwise</button>
+      <button type="button" id="clockwise">Clockwise</button>
       <br />
-      <a href="/motor/left" class="button">Left corner</a>
-      <a href="/motor/right" class="button">Right corner</a>
+      <button type="button" id="left">Left</button>
+      <button type="button" id="right">Right</button>
       <br />
-      <a href="/motor/backward" class="button">Backward</a>
+      <button type="button" id="backward">Backward!</button>
       <br />
       <iframe src="http://192.168.0.99" title="Patrol Cam" width="875" height="680"></iframe>
       <br />
       <a href="/motor/shutdown" class="button">SHUTDOWN!</a>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script>
+        $SCRIPT_ROOT = {{ request.script_root|tojson }}
+        $(function() {
+          $('button#stop'         ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/stop')});
+          $('button#forward'      ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/forward')});
+          $('button#anticlockwise').bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/anticlockwise')});
+          $('button#clockwise'    ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/clockwise')});
+          $('button#left'         ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/left')});
+          $('button#right'        ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/right')});
+          $('button#backward'     ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/backward')});
+          })
+      </script>
    </body>
 </html>
