--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html  lang="en" >
-   <head>
-      <title>Patrol Robot</title>
-      <meta http-equiv="refresh" content="300" />
-      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
-      <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
-      <link rel="manifest" href="/static/site.webmanifest">
-   </head>
-   <body>
-      <h1>Patrol Robot</h1>
-      <h2>The date and time on the server is: {{ time }}</h2>
+  <head>
+    <title>Patrol Robot</title>
+    <meta http-equiv="refresh" content="600" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
+    <style>
+    #joystick {border: 1px solid red; border-radius: 5px;}
+    </style>
+  </head>
+  <body>
+    <h1>Patrol Robot</h1>
+    <h2>The date and time on the server is: {{ time }}</h2>
+    <div>
       <button type="button" id="stop">STOP!</button>
       <button type="button" id="forward">Forward</button>
       <br />
@@ -22,22 +29,29 @@
       <button type="button" id="right">Right</button>
       <br />
       <button type="button" id="backward">Backward!</button>
-      <br />
-      <iframe src="http://192.168.0.99" title="Patrol Cam" width="875" height="680"></iframe>
-      <br />
-      <a href="/motor/shutdown" class="button">SHUTDOWN!</a>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-      <script>
-        $SCRIPT_ROOT = {{ request.script_root|tojson }}
-        $(function() {
-          $('button#stop'         ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/stop')});
-          $('button#forward'      ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/forward')});
-          $('button#anticlockwise').bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/anticlockwise')});
-          $('button#clockwise'    ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/clockwise')});
-          $('button#left'         ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/left')});
-          $('button#right'        ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/right')});
-          $('button#backward'     ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/backward')});
-          })
-      </script>
-   </body>
+    <div/>
+    <div>
+      <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px;"></div>
+    </div>
+    <iframe src="http://192.168.0.99" title="Patrol Cam" width="875" height="680"></iframe>
+    <br />
+    <a href="/motor/shutdown" class="button">SHUTDOWN!</a>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+      $SCRIPT_ROOT = {{ request.script_root|tojson }}
+      $(function() {
+        $('button#stop'         ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/stop')});
+        $('button#forward'      ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/forward')});
+        $('button#anticlockwise').bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/anticlockwise')});
+        $('button#clockwise'    ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/clockwise')});
+        $('button#left'         ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/left')});
+        $('button#right'        ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/right')});
+        $('button#backward'     ).bind('click', function() {$.getJSON($SCRIPT_ROOT + '/motor/backward')});
+        })
+    </script>
+    <script src="/static/joy.min.js"></script>
+    <script type="text/javascript">
+      var joy = new JoyStick('joyDiv');
+    </script>
+  </body>
 </html>
